ingress-rule/ingress-rule.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app.example.com
  namespace: webapp
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: webapp
  name: webapp
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: app.example.com
    http:
      paths:
      - backend:
          service:
            name: webapp-svc
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - app.example.com
    secretName: app-example-tls
